--- a/whac-a-mole-master/mole.css
+++ b/whac-a-mole-master/mole.css
@@ -1,1 +1,75 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    background: url("./mario-bg.jpg");
+    background-size: cover;
+    margin: 0;
+}
+
+h1, h2 {
+    color: white; 
+}
+ 
+#board {
+    width: 540px;
+    height: 540px;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    background: url("./soil.png");
+    background-size: cover;
+    border: 3px solid white;
+    border-radius: 25px;
+}
+
+#board div {
+    width: 180px;
+    height: 180px;
+    background-image: url("./pipe.png");
+    background-size: cover;
+    position: relative;
+}
+
+#board div img {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+#highScore {
+    color: white;
+    padding: 10px 20px;
+    font-size: 30px; 
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    margin-top: 20px 10px;
+}
+
+
+#restartButton {
+    background-color: #bc814d;
+    color: whitesmoke;
+    padding: 10px 10px;
+    font-size: 30px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    margin: auto; /* Center the button horizontally */
+    display: block; /* Make it a block-level element to use margin: auto */
+    margin-top: 20px;
+}
+
+
+#restartButton:hover {
+    background-color: #192897;
+}
 
